--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,39 @@
+@import '_reset';
+@import '_variables';
+@import '_functions';
+@import '_mixins';
+@import 'typography/_styles';
+
 body {
   background: black;
+  background-image: radial-gradient(circle at 27% 53%, $dark-blue-grey, #162538 56%, #162538 56%, #111c2b);
+  color: white;
+}
+
+.app {
+  text-align: center;
+  padding: 100px;
+}
+
+.app:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: url(/assets/images/noise-50.png) 0 0 repeat;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.app-grid {
+  padding: 50px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
