--- a/src/components/paths/paths.css
+++ b/src/components/paths/paths.css
@@ -1,5 +1,4 @@
 .paths {
-
   svg {
     width: 1000px;
     height: 1000px;
@@ -8,8 +7,8 @@
   }
 
   path {
-    stroke: hotpink;
-    stroke-width: 5px;
+    stroke: url(#linear);
+    stroke-width: 2px;
   }
 
   circle {
