--- a/src/components/paths/paths.css
+++ b/src/components/paths/paths.css
@@ -1,7 +1,7 @@
 .paths {
   svg {
-    width: 1000px;
-    height: 1000px;
+    width: 500px;
+    height: 500px;
 
     background: black;
   }
@@ -12,6 +12,6 @@
   }
 
   circle {
-    fill: hotpink;
+    fill: none;
   }
 }
