--- a/src/components/paths/paths.css
+++ b/src/components/paths/paths.css
@@ -1,14 +1,17 @@
 .paths {
   svg {
-    width: 500px;
+    width: 1000px;
     height: 500px;
 
-    background: black;
+    background-size: 4px 4px;
+    background-color: rgb(29, 29, 29);
+    background-image: linear-gradient(0deg, transparent 75%, rgba(255, 255, 255, 0.05) 75%), linear-gradient(90deg, transparent 75%, rgba(255, 255, 255, 0.05) 75%);
   }
 
   path {
     stroke: url(#linear);
     stroke-width: 2px;
+    fill: none;
   }
 
   circle {
